tests/netconvert/import/XML/errors/lane_index_invalid/errors.netconvert
Error: Lane index is larger than number of lanes (edge 'gneE0').
Quitting (on error).
